[package]
name = "hx711_spi"
description = "A platform agnostic driver to interface with the HX711 using SPI"
categories = ["embedded", "hardware-support"]
keywords = ["embedded-hal-driver", "embedded-hal", "loadcell", "hx711", "amplifier", "adc", "driver"]
authors = ["crjeder <crjeder@gmail.com>"]
repository = "https://github.com/crjeder/hx711_spi"
readme = "README.md"
documentation = "https://docs.rs/hx711_spi"
license = "MIT OR Apache-2.0"
edition = "2018"
version = "0.3.0"

[dependencies]
embedded-hal = "0.2.4"
bitmatch = "0.1.1"
nb = "1.0.0"
