[package]
name = "hx711_spi"
description = "A platform agnostic driver to interface with the HX711 using SPI"
categories = ["embedded", "hardware-support"]
keywords = ["embedded-hal-driver", "embedded-hal", "hx711", "amplifier", "driver"]
authors = ["crjeder <crjeder@gmail.com>"]
repository = "https://github.com/crjeder/hx711_spi"
readme = "README.md"
documentation = "https://docs.rs/hx711_spi"
license = "MIT OR Apache-2.0"
edition = "2021"
version = "0.4.0"

[dependencies]
embedded-hal = "0.2.4"
bitmatch = "0.1.1"
nb = "1.0.0"

[dev-dependencies]
test-case = "2.0.2"
embedded-hal-mock = "0.8.0"
# for the Raspberry Pi example
rppal = { version = "0.13.1", features = ["hal"] }
#cortex-m = "0.7.4"
#cortex-m-rt = "0.7.1"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
#panic-halt = "0.2.0"
#[dependencies.stm32f1xx-hal]
#version = "0.9"
#features = ["rt", "stm32f103", "medium"]
